--- a/simsendmail.1
+++ b/simsendmail.1
@@ -26,13 +26,11 @@ is
 .B sendmail
 interface
 
-.B simsendmail
-is
-.B simta's
-.B sendmail interface.  simsendmail is intended as a replacement for sendmail
-in that any program that currently uses sendmail for communication
-may use simsendmail instead.  simsendmail's behavior, including
-command line options, should be identical to sendmail.
+simsendmail is simta's sendmail interface.  simsendmail is intended
+as a replacement for sendmail in that any program that currently
+uses sendmail for communication may use simsendmail instead.
+simsendmail's behavior, including command line options, should be
+identical to sendmail.
 
 With no flags, simsendmail reads standard input until it reaches
 either the end of file or a special marker consisting only of a
