Added -i to specify URL for invalid reverse.

--- a/simta.8
+++ b/simta.8
@@ -23,7 +23,7 @@
 ] [
 .B \-I
 ] [
-.BI \-I\  option
+.BI \-i\  reference-URL
 ] [
 .BI \-m\  option
 ] [
@@ -117,6 +117,9 @@ Specify simta's base directory
 .TP 19
 .BI \-f\  path/to/filename
 specify simta's config file
+.TP 19
+.B \-i
+Specify URL to return on invalid reverse
 .TP 19
 .B \-I
 Ignore the fact some hosts have a bad reverse in DNS, and still talk to them
