Added STRICT_SMTP_SYNTAX_OFF to config file for -' '

--- a/simta.8
+++ b/simta.8
@@ -98,7 +98,7 @@ Simta reads simta.conf(4)
 .TP 19
 .B \-' '
 disallow strict SMTP syntax checking for compatability with some  non-RFC
-complient SMTP hosts
+complient SMTP hosts.  Can be set in simta.conf with STRICT_SMTP_SYNTAX_OFF.
 .TP 19
 .B \-a
 Disable automatic configuration based on DNS
