sync simta.conf with the command line args

--- a/simta.8
+++ b/simta.8
@@ -41,6 +41,8 @@
 ] [
 .BI \-s\  option
 ] [
+.B \-S
+] [
 .B \-V
 ] [
 .BI \-w\  option
@@ -127,9 +129,6 @@ Ignore the fact some hosts have a bad reverse in DNS, and still talk to them
 .BI \-m\  connections
 Specify the maximum number of connections simta will have at a given time
 .TP 19
-.BI \-M\  maildomain
-Specify simta's mail domain
-.TP 19
 .BI \-p\  port
 Specify which port simta will listen for TCP connection on
 .TP 19
@@ -147,6 +146,9 @@ Enable global relay
 .TP 19
 .BI \-s\ spooldir
 Specify simta's spool directory
+.TP 19
+.B \-S
+Enable submission service
 .TP 19
 .B \-V
 Give version info
