--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 internal
+    - Supressed compiler warnings
     - New queue scheduler timing prefers working to reading
     - Added BLOCK and ACCEPT to RBL syntax for whitelisting
     - Added better penalty box logging
