--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 internal
+    - SMTP Data timer is for global transaction, not for a line
     - SMTP User not local error message change includes local hostname
     - Change MIN_WORK_TIME default to 300 seconds
     - New Content Fileter environment variable, SIMTA_CHECKSUM_SIZE
