--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 internal
+    - SMTP DATA Time Metric
     - SMTP Data timer is for global transaction, not for a line
     - SMTP User not local error message change includes local hostname
     - Change MIN_WORK_TIME default to 300 seconds
@@ -10,6 +11,9 @@ internal
     - Added BLOCK and ACCEPT to RBL syntax for whitelisting
     - Added better penalty box logging
     - bugfix: CTX init function added
+
+0.7.1
+    - checksum bugfix
 
 0.7.0rc3
     - minimal dequoting of quoted strings for LDAP searches
