--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 internal
+    - content filter can trigger tarpitting
     - f_data() cleaned up
     - SMTP DATA Time Metric
     - SMTP Data timer is for global transaction, not for a line
