TARPIT individual stage timeouts, SMTP_MODE config file directives

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 internal
+    - TARPIT individual stage timings
+    - SMTP_MODE config directive
     - LDAP "bad filter" error doesn't stop expansion
     - added FAILED_RCPT_PUNISHMENT to give the TARPIT option
     - SMTP READ_BEFORE_BANNER option added
