SIMTA_UID available in content filter

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 internal
     X makefile patch
-    X $SIMTA_UID
     X adam's bugs for RBL LOGS
+    - SIMTA_UID available in the content filter
     - RBL accounting bugfig
     - switched from double to single linked list for connection_info tracking
     - syslog openlog() bug fixed
