--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.8.1.s
+    - report data read and wrote to a client relative to Dfile size
+    - no double syslog message
+    - log more of what the client says
+
 0.8.1.r
     - bugfix
 
