give back IP when RBL_BLOCK

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.8.1.w
+    - make sure that RBL_BLOCK gives back IP Address
     - bugfix for TIMEOUT call
     - more standardization for smtp banners
 
