--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
+0.8.2.1.a
+    X connect startup sequence audit
+    X simple simta exit logging - audit
+    X local throttles overridden by RBL ACCEPT
+    X global throttles
+
 0.8.2.a
-    - bugfix
+    - CF Bounce
+    - JAIL bugfix
+    - REFUSE_MODE bugfix
     - DELIVER_AFTER_ACCEPT
     - timers
 
