--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.8.3.b
     - DISK_FACTOR and COMMAND_FACTOR added
+    - GLOBAL_RELAY_DISABLE_SENDER_CHECKING -> DISABLE_SENDER_CHECKING
 
 0.8.3.a
     - simta one process model
