--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@ internal
     - additional logging to help track down "no deliver" poison message
     - logging for SASL bug @ DEBUG_LOGGING level 1
     - (bugfix) accurately complain about simta_local_connections_max
+    - (warnings fix) make sure oflags is initialized
 
 0.8.2
     - simta_gettimeofday() preffered interface
