--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ internal
     - logging for SASL bug @ DEBUG_LOGGING level 1
     - (bugfix) accurately complain about simta_local_connections_max
     - (warnings fix) make sure oflags is initialized
+    - Fix parallel build bug found by zeke
 
 0.8.2
     - simta_gettimeofday() preffered interface
