--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ internal
     - (bugfix) accurately complain about simta_local_connections_max
     - (warnings fix) make sure oflags is initialized
     - Fix parallel build bug found by zeke
+    - dnsr bug fix (ignore IPV6 AAAA records)
 
 0.8.2
     - simta_gettimeofday() preffered interface
