Cosmetic: s/supress/suppress/
This has been bugging me for a while.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -285,7 +285,7 @@
     - New Content Fileter environment variable, SIMTA_CHECKSUM_SIZE
     - Content filter checksum now includes all non-failed rcpt to addresses
     - Added simck test program
-    - Supressed compiler warnings
+    - Suppressed compiler warnings
     - New queue scheduler timing prefers working to reading
     - Added BLOCK and ACCEPT to RBL syntax for whitelisting
     - Added better penalty box logging
