--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.10.8
+    - fall back to plaintext when optional STARTTLS failed
     - reworked inbound TLS, improved error handling
     - new RBL type: TRUST
 
