Clean up basedir mess
daemon.c was setting two different variables with defaults from
different preprocessor symbols (spooldir/_PATH_SPOOL was only used to
set CWD, config_base_dir/SIMTA_BASE_DIR was passed to simta_config
and determined the actual spool directory paths.) Outside of daemon.c
simta_base_dir was used (which is also what would be changed by
setting BASE_DIR in simta.conf, which then wouldn't actually be used
as the base dir.)

Consistently use and set simta_base_dir, and set its default using the
SIMTA_BASE_DIR CPP symbol.

--- a/simta.8
+++ b/simta.8
@@ -39,8 +39,6 @@
 ] [
 .B \-R
 ] [
-.BI \-s\  option
-] [
 .B \-S
 ] [
 .B \-V
@@ -144,23 +142,20 @@ Uses randfile for tls communication
 .B \-R
 Enable global relay
 .TP 19
-.BI \-s\ spooldir
-Specify simta's spool directory
-.TP 19
 .B \-S
 Enable submission service
 .TP 19
 .B \-V
-Give version info
+Output version info
 .TP 19
 .BI \-w\  authlevel
 Set authlevel: 0:none, 1:serv, 2:client & serv
 .TP 19
 .BI \-x\  ca-file
-Specify wich ca file to use
+Specify which ca file to use
 .TP 19
 .BI \-y\  cert-file
-Specify wich cert file to use
+Specify which cert file to use
 .TP 19
 .BI \-z\  private_key
 Specify the private key
