--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.11.3
+    - defaulted NO_SYNC and CHECKSUM_BODY to ON
+    - removed some annoying log lines
+
 0.11.2
     - fixed a bug that broke delivery to ancient hosts when TLS was disabled
     - fixed a bug that could cause simta to take spurious filter actions
